--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,15 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Adam H. | Front End Web Developer</title>
   </head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-VCVNV2YS66"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-VCVNV2YS66');
+  </script>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
